# Risosir

./: .gitignore  Cargo.toml  a.txt  build.rs  diss.txt  fs.img  main_dissasm_after.txt  main_dissasm_before.txt
.cargo/: config.toml
shared_files/: console.txt  hi.txt  kernel  ls  print  risosir  test
src/fs/: Cargo.toml
src/fs/src/: lib.rs
src/kernel/: Cargo.toml
src/kernel/src/: arch.rs  console.rs  cpu.rs  elf_parse.rs  entry.rs  kernelvec.rs  keyboard.rs  lib.rs  main.rs  memlayout.rs  param.rs  plic.rs  proc.rs  scheduler.rs  spinlock.rs  start.rs  syscall.rs  trampoline.rs  trap.rs  uart.rs  virtio.rs
src/kernel/src/arch/: memlayout.rs  mod.rs
src/kernel/src/arch/common/: mod.rs  privilage.rs
src/kernel/src/arch/registers/: csr.rs  gpr.rs  mmapped.rs  mod.rs
src/kernel/src/file/: mod.rs
src/kernel/src/files/: mod.rs
src/kernel/src/fs/: mod.rs
src/kernel/src/kernelvec/: mod.rs
src/kernel/src/mem/: heap.rs  mod.rs  paging.rs  virtual_mem.rs
src/kernel/src/proc/: mod.rs
src/kernel/src/trap/: exception.rs  interrupt.rs  mod.rs
src/kernel/src/uart/: mod.rs
src/user/: Cargo.toml  build.rs  user.ld
src/user/src/: lib.rs  syscalls.rs
