cargo-features = ["per-package-target"]

[package]
name = "kernel"
edition = "2021"
version.workspace = true
license.workspace = true
forced-target = "riscv64gc-unknown-none-elf"

[dependencies]
spin = "0.5.2"
linked_list_allocator = "0.9"
conquer-once = { version = "0.4", default-features = false }
riscv = "0.11"
riscv-peripheral = "0.1"
fs = { path = "../fs" }
elf = { version = "0.7", default-features = false }
aligned-vec = { version = "0.6.1", default-features = false }

[lib]
name = "kernel"
path = "src/lib.rs"

[features]
default = []
ulib = []
debug-allocations = []
test-kernel = []
fs = []
